--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  border: 2px solid #d3d3d3;
+  /* border: 2px solid #d3d3d3; */
   border-radius: .5em;
   margin-bottom: 1em;
   margin-left: auto;
