--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
+
+body { min-height: 100vh; margin: 0; background-color: #faf5f0}
+
 .App {
-  /* border: 2px solid #d3d3d3; */
-  border-radius: .5em;
-  margin-bottom: 1em;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
-  padding: 1em;
-  text-align: left;
-  width: 600px;
+  font-family: 'Playfair Display', serif;
   
 }
 
